clusters/base/kiali/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - host: host.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kiali
                port:
                  number: 20001
